<resources>
    <string name="app_name" translatable="false">SoundBox</string>
    <string name="home">Home</string>
    <string name="animal">Animal</string>
    <string name="ambiance">Ambiance</string>
    <string name="jingle">Jingle</string>
    <string name="categories">Categories</string>
    <string name="created_by">Created by</string>
    <string name="author_alexi" translatable="false">Alexi Courieux</string>
    <string name="author_romain" translatable="false">Romain Haas</string>
    <string name="author_nathan" translatable="false">Nathan Fournier</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="number_picker">Number Picker</string>
    <string name="Value_number_picker">Value of Number Picker : </string>
    <string name="sound_cat">Cat</string>
    <string name="sound_dog">Dog</string>
    <string name="sound_cow">Cow</string>
    <string name="sound_guitar">Guitar</string>
    <string name="sound_success">Success</string>
    <string name="sound_epic">Epic</string>
    <string name="sound_strange">Strange</string>
    <string name="sound_monkey">Monkey</string>
    <string name="sound_nature">Nature</string>
    <string name="sound_city">City</string>
</resources>
