<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
                android:text="@string/animal"
                android:layout_width="331dp"
                android:layout_height="wrap_content" android:id="@+id/button_animal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <Button
                android:text="@string/ambiance"
                android:layout_width="331dp"
                android:layout_height="48dp" android:id="@+id/button_ambiance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_animal"/>
        <Button
                android:text="@string/jingle"
                android:layout_width="331dp"
                android:layout_height="wrap_content" android:id="@+id/button_jingle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_ambiance"/>
        <TextView
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:textSize="30sp"/>
        <TextView
                android:text="@string/created_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textView3"/>
        <TextView
                android:text="@string/author_alexi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView4"/>
        <TextView
                android:text="@string/author_romain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView5"/>
        <TextView
                android:text="@string/author_nathan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>