<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <fr.iutnice.courieux.soundbox.canvas.CustomView
            android:layout_width="333dp"
            android:layout_height="410dp"
            android:id="@+id/customView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.514"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.496"/>
    <TextView
            android:text="@string/created_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textCreatedBy"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/author_alexi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAuthorAlexi"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textCreatedBy"/>

    <TextView
            android:text="@string/author_romain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAuthorRomain"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textAuthorAlexi"
            app:layout_constraintHorizontal_bias="0.502"/>

    <TextView
            android:text="@string/author_nathan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAuthorNathan"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/textAuthorRomain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

</android.support.constraint.ConstraintLayout>